# AI_Assistant_for_Visually_Impaired

./: .gitignore  README.md  dev_server.py  index.html  main.py  pyproject.toml  requirements.txt  run_visio_ai.cmd  run_visio_mobile.cmd  visio_ai_server.py
app/: __init__.py  config.py  models.py  prompts.py  utils.py
app/routes/: __init__.py  pages.py  websocket.py
app/services/: memory.py  processor.py  speech.py
docs/: project_solution.md
extracted/: 2511.06080v3_1.txt  projectReport_1_1.txt
public/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
static/: manifest.json  sw.js
static/css/: main.css
static/js/: config.js  haptics.js  input.js  localVision.js  main.js  network.js  speech.js  ui.js
templates/: index.html
tests/: test_contracts.py  test_dev_server.py  test_guidance.py  test_model_rest.py
