[project]
name = "assistive-vision-platform"
version = "0.1.0"
description = "Mobile-first assistive camera guidance with OCR, object finding, haptics, and privacy-safe memory."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "python-dotenv>=1.0,<2.0",
  "pillow>=10.0,<13.0",
  "google-genai>=1.0,<2.0",
  "aiofiles>=24.0,<25.0"
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["app", "app.routes", "app.services"]

